WOS-211 POC component limit per page reached