@@ -18,6 +18,7 @@ package pl.ds.bulma.components.services;
 
 import java.io.IOException;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -31,13 +32,13 @@ import pl.ds.bulma.components.utils.ContentGeneration;
 
 public class GenerateTestContent {
   public static void main(String[] args)
-      throws IllegalAccessException, IOException, InstantiationException {
+      throws IllegalAccessException, IOException, InstantiationException, InvocationTargetException, NoSuchMethodException {
     generateTestContent(TitleComponent.class);
     generateTestContent(ContentComponent.class);
   }
 
   private static <T> void generateTestContent(Class<T> classT)
-      throws IOException, IllegalAccessException, InstantiationException {
+      throws IOException, IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
     System.out.println("Auto-generating test content");
 
     String rootPath = "./content/src/main/content/jcr_root/content/bulma/pages/";
@@ -59,19 +60,16 @@ public class GenerateTestContent {
     List<List<Object>> perm = permuteLists(
         fieldNames.stream().map(it -> {
           var annotation = fieldNameToValues.get(it);
-          if (annotation.bools().values().length > 0) {
-            return List.<Object>of(annotation.bools().values());
+          if (annotation.booleanValues().length > 0) {
+            return List.<Object>of(Boolean.FALSE, Boolean.TRUE);
           }
-          return List.<Object>of(annotation.strings().values());
+          return List.<Object>of(annotation.stringValues());
         }).toList());
 
-    //TODO typy
-    //TODO inne klasy
-
     StringBuilder testContent = new StringBuilder();
-    for (int j = 0; j < perm.size(); j++) {
+    for (int j = 0; j < perm.size() && j < 950; j++) {
       var permutationInstance = perm.get(j);
-      var componentInstance = classT.newInstance();
+      var componentInstance = classT.getDeclaredConstructor().newInstance();
       for (int i = 0; i < fieldNames.size(); i++) {
         var fieldName = fieldNames.get(i);
         Object fieldValue = permutationInstance.get(i);
@@ -104,7 +102,7 @@ public class GenerateTestContent {
 
     Files.writeString(Paths.get(contentFilePath), page, Charset.defaultCharset());
 
-    System.out.println("Auto-generated test content");
+    System.out.println("Auto-generated test content done");
     System.out.println(testContent);
   }
 
@@ -132,7 +130,7 @@ public class GenerateTestContent {
   private static <T> String getXmlContent(int uniqueIndex, T componentInstance, Class<T> classT) {
     var classFields = FieldUtils.getFieldsListWithAnnotation(
         classT, ContentGeneration.class);
-    String uniqueNodeName = "uniqueNodeName_%s".formatted(uniqueIndex);
+    String uniqueName = "uniqueName_%s".formatted(uniqueIndex);
     String path = "bulma/components/%s".formatted("title");
     String fields = classFields.stream().map(it -> {
       try {
@@ -147,8 +145,7 @@ public class GenerateTestContent {
         <%s
           jcr:primaryType="nt:unstructured"
           sling:resourceType="%s"
-          addSubtitle="true"
           %s/>
-        """.formatted(uniqueNodeName, path, fields);
+        """.formatted(uniqueName, path, fields);
   }
 }
